--- a/src/details.html
+++ b/src/details.html
@@ -171,22 +171,22 @@
         <div class="detialsRecomm">
             <div class="detialConditionDataInput">
                 <span>
+                    <span class="color">*</span>
                     <span>媽媽姓名</span>
-                    <span>*</span>
                 </span>
                 <input type="text" name="lname" />
             </div>
             <div class="detialConditionDataInput">
                 <span>
+                    <span class="color">*</span>
                     <span>電子郵件</span>
-                    <span>*</span>
                 </span>
                 <input type="text" name="lname" />
             </div>
             <div class="detialConditionDataInput">
                 <span>
+                    <span class="color">*</span>
                     <span>媽媽生日</span>
-                    <span>*</span>
                 </span>
                 <div class="iDate date">
                     <input type="text" placeholder="yyyy-mm-dd">
@@ -196,8 +196,8 @@
 
             <div class="detialConditionDataInput">
                 <span>
+                    <span class="color">*</span>
                     <span>預產期</span>
-                    <span>*</span>
                 </span>
                 <div class="iDate date">
                     <input type="text" placeholder="yyyy-mm-dd">
@@ -208,8 +208,8 @@
             <div class="detialConditionDataInput">
                 <span class="colorFont">
                     <span>
-                        <span>胎次</span>
                         <span class="color">*</span>
+                        <span>胎次</span>
                     </span>
                 </span>
 
@@ -221,8 +221,8 @@
             <div class="detialConditionDataInputHP">
                 <span class="colorFont">
                     <span>
-                        <span>生產醫院</span>
                         <span class="color">*</span>
+                        <span>生產醫院</span>
                     </span>
                 </span>
                 <span>
@@ -247,7 +247,6 @@
                 <span class="colorFont">
                     <span>
                         <span>居住地址</span>
-                        <span class="color">&nbsp;</span>
                     </span>
                 </span>
                 <span>
@@ -269,22 +268,29 @@
 
             <div class="detialConditionDataInput">
                 <span>
+                    <span class="color">*</span>
                     <span>聯絡電話(日)</span>
-                    <span>*</span>
                 </span>
-                <input type="text" name="lname" />
+                <span class="phone">
+                    <input class="phone1" type="text" name="lname" placeholder="區碼" />+
+                    <input class="phone1" type="text" name="lname" placeholder="電話" />+
+                    <input class="phone1" type="text" name="lname" placeholder="分機" />
+                </span>
             </div>
             <div class="detialConditionDataInput">
                 <span>
                     <span>聯絡電話(夜)</span>
-                    <span>&nbsp;</span>
                 </span>
-                <input type="text" name="lname" placeholder="區碼+電話+分機" />
+                <span class="phone">
+                    <input class="phone1" type="text" name="lname" placeholder="區碼" />+
+                    <input class="phone1" type="text" name="lname" placeholder="電話" />+
+                    <input class="phone1" type="text" name="lname" placeholder="分機" />
+                </span>
             </div>
             <div class="detialConditionDataInput">
                 <span>
+                    <span class="color">*</span>
                     <span>手機號碼</span>
-                    <span>*</span>
                 </span>
                 <input type="text" name="lname" />
             </div>
@@ -311,14 +317,30 @@
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
-                        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                        <h4 class="modal-title" id="myModalLabel">亞培媽媽教室線上報名條款與隱私保護方針</h4>
                     </div>
                     <div class="modal-body">
-                        mac os安装好了很久了，不过没怎么用，昨天想要体验一下大神们推荐的黑苹果系统用起来怎么样（关于安装黑苹果的可以到我的简书去看相关文章），于是乎，打开久违的vmware，看着咬一口的苹果进度图，心中其实是有一些小激动的。 　　进入系统后，先是找终端找不到，在win下用惯了cmd，到这完全找不到北在哪。
-                        　　经过阿杜告诉我的，先进入Finder，然后左侧找到“应用程序”，选择实用工具，再找到“终端”，这就是我们中win下的cmd了。或者就是这左上角点放大镜，输入ter回车第一个就是。
+                        <h5>亞培專屬會員資料索取、諮詢檢測、線上訂購、會員資料登入約定條款 </h5>
+                        <p>
+                            1.&nbsp;&nbsp;&nbsp;&nbsp; 為方便您能在亞培專屬會員使用完整功能並確保您完整的權益，請務必確實填寫您的資料，若發現有填寫不實的狀況，亞培網站得以暫停或終止您的訂單與會員資格。
+                            <br>2.&nbsp;&nbsp;&nbsp;&nbsp; 本網站絕對尊重會員個人隱私，除法令或因相關主管機關要求外，在未獲會員授權時，絕不公開您的姓名、地址、電子郵件信箱，以及其他依法受保護的個人資訊。對於您所登入之資料，亞培也會善盡保護之責任，未獲會員授權前，絕不外流。
+                            <br>3.&nbsp;&nbsp;&nbsp;&nbsp; 亞培專屬會員僅限居住在中華民國台灣本島及金門, 馬祖, 澎湖地區之居民訂購產品並申請加入會員。
+                            <br>4.&nbsp;&nbsp;&nbsp;&nbsp; 為保護消費者, 亞培專屬會員僅開放年滿20歲(含)以上方得訂購產品並加入會員。
+                            <br>5.&nbsp;&nbsp;&nbsp;&nbsp; 非經亞培專屬會員事先同意，您不得將亞培專屬會員內之任何資料複製、移轉、散佈、租用或出售等。且不得以任何方式，企圖破壞及干擾 亞培專屬會員上之各項資料與功能。同時必須遵守電信法及其他相關法令之規定，如有違反，亞培專屬會員得依法請求賠償。
+                            <br>6.&nbsp;&nbsp;&nbsp;&nbsp; 亞培專屬會員上所刊登的文章及資訊僅供參考，若會員對於內容有任何疑問，請洽詢專業醫護人員，依個人狀況進行評估。
+                            <br>7.&nbsp;&nbsp;&nbsp;&nbsp; 會員於亞培專屬會員上所發表的文字、照片、影片或其他任何形態的資訊，均視為發言人個人言論，不代表本網站立場。對於不恰當之發言內 容，亞培專屬會員將保留移除與否之權利，以維護網站秩序並保障其他人閱覽時之權益。如內容有任何侵害他人權益或違法之情事，會員同意自行負責，與本網站無關。
+                            <br>8.&nbsp;&nbsp;&nbsp;&nbsp; 您了解並同意有關於我們收集您個人資料及我們將如何使用這些資訊。我們將使用您的資訊用於郵寄（或以電子郵件方式）電話、傳真或行動電話簡訊給您有關嬰幼兒營養，成人保健，體重管理，或各種急慢性病保健如：糖尿病，慢性腎臟病，腫瘤，慢性阻塞性肺病，管灌…等及相關治療、產品與服務之有用資訊。以及提供行銷與資訊應用方面，我們也可將此資訊交付協助我們收集與處理資訊的關係企業及其子公司，以及本公司所授權之獨立第三方分享或轉至其他國家。您同意上述所述之收集,使用並開放使用您的個人資料。有任何問題，你會主動聯繫本公司。
+                            <br>9.&nbsp;&nbsp;&nbsp;&nbsp; 亞培專屬會員保留隨時修改或中斷網站內容與服務而不需告知用戶的權利。如果亞培專屬會員行使修改或中斷網站內容與服務的權利，則無需對用戶或任何第三方負責。
+                            <br>10. &nbsp;&nbsp;&nbsp;&nbsp;您同意亞培專屬會員使用、蒐集您的資料是為了透過寄發(包含電子郵件)及電話服務等提供對你本身有助益、實用的信息，如：健康/ 產品/服務/相關治療…等資訊及新聞訊息。
+                            同時作為亞培進行行銷活動, 研究或與其關係企業內之利用。若您不需要收到相關資訊，亦可備妥個人相關資料寄回亞培, 亞培將於兩週內取消寄送。
+                            <br>11. &nbsp;&nbsp;&nbsp;&nbsp;您除應遵守本約定書外，亦同意遵守亞培專屬會員各項法律規定，如未遵守，亞培專屬會員保留取消您會員資格之權利。若會員權益之內容有異動
+                            時，亞培專屬會員會於網站上即時公告，並以電子郵件或信函通知會員。會員應於收到通知後15日內閱讀修正後之條款，並回覆有異議之部分，否則視為 同意遵守修正後之約定條款。
+                            <br>12. &nbsp;&nbsp;&nbsp;&nbsp;本約定條款以中華民國法律為準據法，若會員因本約定條款而與亞培專屬會員有涉及訴訟時，同意以台灣台北地方法院為第一審管轄法院。但法律有專屬管轄之特別規定者，從其規定。
+
+                        </p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn-purpel">赞同</button>
+                        <button type="button" class="btn-purpel" data-dismiss="modal">赞同</button>
                     </div>
                 </div>
             </div>
