--- a/src/login2.html
+++ b/src/login2.html
@@ -73,8 +73,8 @@
         <div class="loginInformation">
             <div class="detialConditionDataInput informationConditionDataInput">
                 <span>
+                    <span class="color">*</span>
                     <span>懷孕中</span>
-                    <span>*</span>
                 </span>
                 <div>
                     <input type="radio" name="lname" /> 是 &nbsp;&nbsp;&nbsp;&nbsp;
@@ -92,8 +92,8 @@
             </div>
             <div class="detialConditionDataInput">
                 <span>
+                    <span class="color">*</span>
                     <span>預產期</span>
-                    <span>*</span>
                 </span>
                 <div class="iDate date">
                     <input type="text" placeholder="yyyy-mm-dd">
@@ -103,8 +103,8 @@
             <div class="detialConditionDataInput">
                 <span class="colorFont">
                     <span>
-                        <span>胎次</span>
                         <span class="color">*</span>
+                        <span>胎次</span>
                     </span>
                 </span>
                 <div class="informationInput select" id="trigger15">
@@ -114,8 +114,8 @@
             <div class="detialConditionDataInputHP">
                 <span class="colorFont">
                     <span>
-                        <span>生產醫院</span>
                         <span class="color">*</span>
+                        <span>生產醫院</span>
                     </span>
                 </span>
                 <span>
@@ -138,8 +138,8 @@
             </div>
             <div class="detialConditionDataInput informationConditionDataInput">
                 <span>
+                    <span class="color">*</span>
                     <span>有小孩</span>
-                    <span>*</span>
                 </span>
                 <div>
                     <input type="radio" name="lname" /> 是 &nbsp;&nbsp;&nbsp;&nbsp;
@@ -162,7 +162,6 @@
             <div class="detialConditionDataInput">
                 <span>
                     <span>寶寶姓名</span>
-                    <span>*</span>
                 </span>
                 <div class="informationInput">
                     <input type="text">
@@ -172,7 +171,6 @@
                 <span class="colorFont">
                     <span>
                         <span>親子關系</span>
-                        <span class="color">*</span>
                     </span>
                 </span>
 
@@ -183,7 +181,6 @@
             <div class="detialConditionDataInput">
                 <span>
                     <span>寶寶生日</span>
-                    <span>*</span>
                 </span>
                 <div class="iDate date">
                     <input type="text" placeholder="yyyy-mm-dd">
@@ -196,7 +193,6 @@
                 <div class="detialConditionDataInput">
                     <span>
                         <span>寶寶姓名</span>
-                        <span>*</span>
                     </span>
                     <div class="informationInput">
                         <input type="text">
@@ -206,7 +202,6 @@
                     <span class="colorFont">
                         <span>
                             <span>親子關系</span>
-                            <span class="color">*</span>
                         </span>
                     </span>
                     <div class="informationInput select" id="trigger19">
@@ -216,7 +211,6 @@
                 <div class="detialConditionDataInput">
                     <span>
                         <span>寶寶生日</span>
-                        <span>*</span>
                     </span>
                     <div class="iDate date">
                         <input type="text" placeholder="yyyy-mm-dd">
@@ -227,9 +221,8 @@
                     <div class="detialConditionDataInput">
                         <span>
                             <span>寶寶姓名</span>
-                            <span>*</span>
                         </span>
-                        <div>
+                        <div class="informationInput">
                             <input type="text">
                         </div>
                     </div>
@@ -237,7 +230,6 @@
                         <span class="colorFont">
                             <span>
                                 <span>親子關系</span>
-                                <span class="color">*</span>
                             </span>
                         </span>
                         <div class="informationInput select" id="trigger20">
@@ -247,28 +239,21 @@
                     <div class="detialConditionDataInput">
                         <span>
                             <span>寶寶生日</span>
-                            <span>*</span>
                         </span>
                         <div class="iDate date">
                             <input type="text" placeholder="yyyy-mm-dd">
                             <button type="button" class="addOn"></button>
                         </div>
                     </div>
-                    <div class="detialConditionDataInputHP">
+                    <div class="detialConditionDataInput">
                         <span>
                             <span>驗證碼</span>
-                            <span>&nbsp</span>
                         </span>
-                        <span>
-                            <div class="informationInput">
-                                <input type="text" name="lname" placeholder="驗證碼" />
-
-                            </div>
-                            <div>
-
-                            </div>
-                        </span>
+                        <div class="informationInput" >
+                            <input type="text" placeholder=" 驗證碼 ">
+                        </div>
                     </div>
+
 
                     <div class="sign-in-container-p1">
                         <button class="btn-lg-purpel" data-toggle="modal" data-target="#mobile_Modal02">送出
