--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,7 @@
         </div>
       </div>
       <div class="recommButton">
-        <button>立即报名</button>
+        <button>立即報名</button>
       </div>
     </div>
 
@@ -218,7 +218,7 @@
         </div>
       </div>
       <div class="recommButton">
-        <button>立即报名</button>
+        <button>立即報名</button>
       </div>
     </div>
 
