--- a/src/questionnaire.html
+++ b/src/questionnaire.html
@@ -363,7 +363,7 @@
 <img class="buttom-img" src="images/m_footer_bg.png" alt="" />
 <div class="copyright">
 	<div class="copyright-text">
-		<p >亞培育兒專線：0800-008-828 | 使用條款 | 隱私權保護</p>
+		<p >亞培育兒專線：<a href="#">0800-008-828</a>&nbsp;|&nbsp;<a href="#">使用條款</a>&nbsp;|&nbsp;<a href="#"> 隱私權保護</a></p>
 		<p >Copyright&nbsp;&copy;&nbsp;2018&nbsp;Abbott&nbsp;Laboratories&nbsp;Services&nbsp;Corp.Taiwan</p>
 		<p >Branch, R.O.C. All &nbsp;Rights&nbsp; Reserved.</p>
 		<img src="./images/logo_white.png" alt=""/>
