--- a/src/forget.html
+++ b/src/forget.html
@@ -42,7 +42,7 @@
 <div class="log-in">
 		<div class="log-in-container">
 			<div class="log-in-title">
-				<p>忘記密碼</p>
+				<a href="#"><p>忘記密碼</p></a>
 			</div>
 			<div class="log-in-paragraphy">
 					<p>輸入之e-mail需與加入會員時填寫的資料一致</p>
@@ -65,10 +65,10 @@
 <img class="buttom-img" src="images/m_footer_bg.png" alt="" />
 <div class="copyright">
 	<div class="copyright-text">
-		<p >亞培育兒專線：0800-008-828 | 使用條款 | 隱私權保護</p>
-		<p >Copyright&nbsp;&copy;&nbsp;2018&nbsp;Abbott&nbsp;Laboratories&nbsp;Services&nbsp;Corp.Taiwan</p>
-		<p >Branch, R.O.C. All &nbsp;Rights&nbsp; Reserved.</p>
-		<img src="./images/logo_white.png" alt=""/>
+			<p >亞培育兒專線：<a href="#">0800-008-828</a>&nbsp;|&nbsp;<a href="#">使用條款</a>&nbsp;|&nbsp;<a href="#"> 隱私權保護</a></p>
+			<p >Copyright&nbsp;&copy;&nbsp;2018&nbsp;Abbott&nbsp;Laboratories&nbsp;Services&nbsp;Corp.Taiwan</p>
+			<p >Branch, R.O.C. All &nbsp;Rights&nbsp; Reserved.</p>
+			<img src="./images/logo_white.png" alt=""/>
 	</div>
 </div>
 
