--- a/src/index.html
+++ b/src/index.html
@@ -224,12 +224,12 @@
 
     <div class="attention">
       <div>亞培媽咪學苑注意事項：</div>
-      <p>1、席位有限，請先預約報名以免向隅。</p>
-      <p>2、預約報名者享有優先兌換贈品權利，座位保留至開課前15分鐘，請準時入場。</p>
-      <p>3、為維護講座品質，謝絕攜帶孩童入場。</p>
-      <p>4、為維護著作財產權，現場禁止錄音、錄影。</p>
-      <p>5、活動當天若有停車需求，請依該場地停車辦法自費繳費。</p>
-      <p>* 以上若有造成不便之處敬請諒解。</p>
+      <p><span>1、</span> <span>席位有限，請先預約報名以免向隅。</span></p>
+      <p><span>2、</span><span>預約報名者享有優先兌換贈品權利，座位保留至開課前15分鐘，請準時入場。</span></p>
+      <p><span>3、</span><span>為維護講座品質，謝絕攜帶孩童入場。</span></p>
+      <p><span>4、</span><span>為維護著作財產權，現場禁止錄音、錄影。</span></p>
+      <p><span>5、</span><span>活動當天若有停車需求，請依該場地停車辦法自費繳費。</span></p>
+      <p><span>*</span> <span>以上若有造成不便之處敬請諒解。</span></p>
     </div>
   </div>
   <!-- 底部版权 -->
