--- a/src/login2.html
+++ b/src/login2.html
@@ -100,6 +100,7 @@
                     <button type="button" class="addOn"></button>
                 </div>
             </div>
+
             <div class="detialConditionDataInput">
                 <span class="colorFont">
                     <span>
@@ -107,14 +108,12 @@
                         <span>胎次</span>
                     </span>
                 </span>
-<<<<<<< HEAD
-                <div class="informationInput select" id="trigger1">
-=======
-                <div class="informationInput select" id="trigger06">
->>>>>>> 85cc0fd717a7fc0065e371ba112cbfea562f2b27
+
+                <div id="trigger01" class="select">
 
                 </div>
             </div>
+
             <div class="detialConditionDataInputHP">
                 <span class="colorFont">
                     <span>
@@ -123,23 +122,22 @@
                     </span>
                 </span>
                 <span>
-                    <div class="informationInput select" id="trigger11">
+                    <div id="trigger2" class="select">
 
                     </div>
-                    <div class="informationInput select" id="trigger12">
+                    <div id="trigger3" class="select">
 
                     </div>
                 </span>
             </div>
             <div class="detialConditionDataInput">
                 <span>
-                    <span>&nbsp;</span>
-                    <span>&nbsp;</span>
+                    <span></span>
+                    <span></span>
                 </span>
-                <div class="informationInput">
-                    <input type="text" name="lname" placeholder="請輸入詳細地址" />
-                </div>
+                <input type="text" name="lname" placeholder="請輸入詳細地址" />
             </div>
+
             <div class="detialConditionDataInput informationConditionDataInput">
                 <span>
                     <span class="color">*</span>
@@ -208,12 +206,7 @@
                             <span>親子關系</span>
                         </span>
                     </span>
-<<<<<<< HEAD
                     <div class="informationInput select" id="trigger18">
-=======
-                    <div class="informationInput select" id="trigger08">
->>>>>>> 85cc0fd717a7fc0065e371ba112cbfea562f2b27
-
                     </div>
                 </div>
                 <div class="detialConditionDataInput">
@@ -240,12 +233,7 @@
                                 <span>親子關系</span>
                             </span>
                         </span>
-<<<<<<< HEAD
                         <div class="informationInput select" id="trigger18">
-=======
-                        <div class="informationInput select" id="trigger09">
->>>>>>> 85cc0fd717a7fc0065e371ba112cbfea562f2b27
-
                         </div>
                     </div>
                     <div class="detialConditionDataInput">
@@ -261,7 +249,7 @@
                         <span>
                             <span>驗證碼</span>
                         </span>
-                        <div class="informationInput" >
+                        <div class="informationInput">
                             <input type="text" placeholder=" 驗證碼 ">
                         </div>
                     </div>
@@ -274,7 +262,11 @@
                     <img class="buttom-img" src="images/m_footer_bg.png" alt="" />
                     <div class="copyright">
                         <div class="copyright-text">
-                            <p >亞培育兒專線：<a href="#">0800-008-828</a>&nbsp;|&nbsp;<a href="#">使用條款</a>&nbsp;|&nbsp;<a href="#"> 隱私權保護</a></p>
+                            <p>亞培育兒專線：
+                                <a href="#">0800-008-828</a>&nbsp;|&nbsp;
+                                <a href="#">使用條款</a>&nbsp;|&nbsp;
+                                <a href="#"> 隱私權保護</a>
+                            </p>
                             <p>Copyright&nbsp;&copy;&nbsp;2018&nbsp;Abbott&nbsp;Laboratories&nbsp;Services&nbsp;Corp.Taiwan</p>
                             <p>Branch, R.O.C. All &nbsp;Rights&nbsp; Reserved.</p>
                             <img src="./images/logo_white.png" alt="" />
