--- a/src/login2.html
+++ b/src/login2.html
@@ -46,7 +46,7 @@
         <!-- button -->
         <div class="complete">
             <div class="complete-container">
-                <div class="complete-wizard">
+                <div class="wizard">
                     <div>
                         <div>1</div>
                         <div>
@@ -272,13 +272,14 @@
                             <img src="./images/logo_white.png" alt="" />
                         </div>
                     </div>
+    </div>
 
-                    <script src="./js/jquery.min.js"></script>
-                    <script src="./js/bootstrap.min.js"></script>
-                    <script type="text/javascript" src="./js/moment.js"></script>
-                    <script type="text/javascript" src="./js/bootstrap-datetimepicker.js"></script>
-                    <script type="text/javascript" src="./js/mobileSelect.min.js"></script>
-                    <script src="./js/index.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./js/moment.js"></script>
+    <script type="text/javascript" src="./js/bootstrap-datetimepicker.js"></script>
+    <script type="text/javascript" src="./js/mobileSelect.min.js"></script>
+    <script src="./js/index.js"></script>
 
 </body>
 
