--- a/src/login2.html
+++ b/src/login2.html
@@ -159,120 +159,121 @@
             </div>
         </div>
 
-        <h2 class="babyInformation">寶寶資料一</h3>
+        <h2 class="babyInformation">寶寶資料一</h2>
 
-            <div class="detialConditionDataInput">
+        <div class="detialConditionDataInput">
+            <span>
+                <span>寶寶姓名</span>
+            </span>
+            <div class="informationInput">
+                <input type="text">
+            </div>
+        </div>
+        <div class="detialConditionDataInput">
+            <span class="colorFont">
                 <span>
-                    <span>寶寶姓名</span>
+                    <span>親子關系</span>
                 </span>
-                <div class="informationInput">
-                    <input type="text">
-                </div>
-            </div>
-            <div class="detialConditionDataInput">
-                <span class="colorFont">
-                    <span>
-                        <span>親子關系</span>
-                    </span>
-                </span>
+            </span>
 
-                <div class="informationInput select" id="trigger07">
+            <div class="informationInput select" id="trigger07">
 
-                </div>
             </div>
-            <div class="detialConditionDataInput">
+        </div>
+        <div class="detialConditionDataInput">
+            <span>
+                <span>寶寶生日</span>
+            </span>
+            <div class="iDate date">
+                <input type="text" placeholder="yyyy-mm-dd">
+                <button type="button" class="addOn"></button>
+            </div>
+        </div>
+
+        <h2 class="babyInformation">寶寶資料二</h2>
+
+        <div class="detialConditionDataInput">
+            <span>
+                <span>寶寶姓名</span>
+            </span>
+            <div class="informationInput">
+                <input type="text">
+            </div>
+        </div>
+        <div class="detialConditionDataInput">
+            <span class="colorFont">
                 <span>
-                    <span>寶寶生日</span>
+                    <span>親子關系</span>
                 </span>
-                <div class="iDate date">
-                    <input type="text" placeholder="yyyy-mm-dd">
-                    <button type="button" class="addOn"></button>
-                </div>
+            </span>
+            <div class="informationInput select" id="trigger18">
             </div>
-
-            <h2 class="babyInformation">寶寶資料二</h3>
-
-                <div class="detialConditionDataInput">
-                    <span>
-                        <span>寶寶姓名</span>
-                    </span>
-                    <div class="informationInput">
-                        <input type="text">
-                    </div>
-                </div>
-                <div class="detialConditionDataInput">
-                    <span class="colorFont">
-                        <span>
-                            <span>親子關系</span>
-                        </span>
-                    </span>
-                    <div class="informationInput select" id="trigger18">
-                    </div>
-                </div>
-                <div class="detialConditionDataInput">
-                    <span>
-                        <span>寶寶生日</span>
-                    </span>
-                    <div class="iDate date">
-                        <input type="text" placeholder="yyyy-mm-dd">
-                        <button type="button" class="addOn"></button>
-                    </div>
-                </div>
-                <h2 class="babyInformation">寶寶資料三</h3>
-                    <div class="detialConditionDataInput">
-                        <span>
-                            <span>寶寶姓名</span>
-                        </span>
-                        <div class="informationInput">
-                            <input type="text">
-                        </div>
-                    </div>
-                    <div class="detialConditionDataInput">
-                        <span class="colorFont">
-                            <span>
-                                <span>親子關系</span>
-                            </span>
-                        </span>
-                        <div class="informationInput select" id="trigger18">
-                        </div>
-                    </div>
-                    <div class="detialConditionDataInput">
-                        <span>
-                            <span>寶寶生日</span>
-                        </span>
-                        <div class="iDate date">
-                            <input type="text" placeholder="yyyy-mm-dd">
-                            <button type="button" class="addOn"></button>
-                        </div>
-                    </div>
-                    <div class="detialConditionDataInput">
-                        <span>
-                            <span>驗證碼</span>
-                        </span>
-                        <div class="informationInput">
-                            <input type="text" placeholder=" 驗證碼 ">
-                        </div>
-                    </div>
+        </div>
+        <div class="detialConditionDataInput">
+            <span>
+                <span>寶寶生日</span>
+            </span>
+            <div class="iDate date">
+                <input type="text" placeholder="yyyy-mm-dd">
+                <button type="button" class="addOn"></button>
+            </div>
+        </div>
+        <h2 class="babyInformation">寶寶資料三</h2>
+        <div class="detialConditionDataInput">
+            <span>
+                <span>寶寶姓名</span>
+            </span>
+            <div class="informationInput">
+                <input type="text">
+            </div>
+        </div>
+        <div class="detialConditionDataInput">
+            <span class="colorFont">
+                <span>
+                    <span>親子關系</span>
+                </span>
+            </span>
+            <div class="informationInput select" id="trigger18">
+            </div>
+        </div>
+        <div class="detialConditionDataInput">
+            <span>
+                <span>寶寶生日</span>
+            </span>
+            <div class="iDate date">
+                <input type="text" placeholder="yyyy-mm-dd">
+                <button type="button" class="addOn"></button>
+            </div>
+        </div>
+        <div class="detialConditionDataInput">
+            <span>
+                <span>驗證碼</span>
+            </span>
+            <div class="informationInput identifying">
+                <input type="text" placeholder=" 驗證碼 ">
+            </div>
+        </div>
 
 
-                    <div class="sign-in-container-p1">
-                        <button class="btn-lg-purpel" data-toggle="modal" data-target="#mobile_Modal02">送出
-                        </button>
-                    </div>
-                    <img class="buttom-img" src="images/m_footer_bg.png" alt="" />
-                    <div class="copyright">
-                        <div class="copyright-text">
-                            <p>亞培育兒專線：
-                                <a href="#">0800-008-828</a>&nbsp;|&nbsp;
-                                <a href="#">使用條款</a>&nbsp;|&nbsp;
-                                <a href="#"> 隱私權保護</a>
-                            </p>
-                            <p>Copyright&nbsp;&copy;&nbsp;2018&nbsp;Abbott&nbsp;Laboratories&nbsp;Services&nbsp;Corp.Taiwan</p>
-                            <p>Branch, R.O.C. All &nbsp;Rights&nbsp; Reserved.</p>
-                            <img src="./images/logo_white.png" alt="" />
-                        </div>
-                    </div>
+        <div class="sign-in-container-p1">
+            <button class="btn-lg-purpel" data-toggle="modal" data-target="#mobile_Modal02">送出
+            </button>
+        </div>
     </div>
+    <img class="buttom-img" src="images/m_footer_bg.png" alt="" />
+    <div class="copyright">
+        <div class="copyright-text">
+            <p>亞培育兒專線：
+                <a href="#">0800-008-828</a>&nbsp;|&nbsp;
+                <a href="#">使用條款</a>&nbsp;|&nbsp;
+                <a href="#"> 隱私權保護</a>
+            </p>
+            <p>Copyright&nbsp;&copy;&nbsp;2018&nbsp;Abbott&nbsp;Laboratories&nbsp;Services&nbsp;Corp.Taiwan</p>
+            <p>Branch, R.O.C. All &nbsp;Rights&nbsp; Reserved.</p>
+            <img src="./images/logo_white.png" alt="" />
+        </div>
+    </div>
+
 
     <script src="./js/jquery.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
