--- a/src/details.html
+++ b/src/details.html
@@ -239,6 +239,7 @@
             <div class="detialConditionDataInputHP">
                 <span class="colorFont">
                     <span>
+                        <span class="color">&nbsp;</span>
                         <span>居住地址</span>
                     </span>
                 </span>
@@ -272,6 +273,7 @@
             </div>
             <div class="detialConditionDataInput">
                 <span>
+                    <span class="color">&nbsp;</span>
                     <span>聯絡電話(夜)</span>
                 </span>
                 <span class="phone">
