--- a/src/shopping-trolley.html
+++ b/src/shopping-trolley.html
@@ -127,7 +127,7 @@
 			<img src="./images/m_product_03.png" alt="product4"></img>
 		</div>
 		<div class="shopping-trolley-container_p_right">
-			<h4>備奶優惠方案<em>（每人限購一組，兩款擇一)</em></h4>
+			<h4>備奶優惠方案<em>(每人限購一組，兩款擇一)</em></h4>
 			<p>規格：心美力400G&nbsp;兩罐/組</p>
 			<p>NT&nbsp;&#36;150</p>
 			<div class="shopping-trolley-container_count">
@@ -147,7 +147,7 @@
 			<img src="./images/m_product_04.png" alt="product5"></img>
 		</div>
 		<div class="shopping-trolley-container_p_right">
-			<h4>備奶優惠方案<em>（每人限購一組，兩款擇一)</em></h4>
+			<h4>備奶優惠方案<em>(每人限購一組，兩款擇一)</em></h4>
 			<p>規格：心美力400G&nbsp;兩罐/組</p>
 			<p>NT&nbsp;&#36;150</p>
 			<div class="shopping-trolley-container_count">
@@ -162,12 +162,6 @@
 
 <!-- 底部计算	 -->
 <div class="shopping-trolley-bottom">
-	<div class="shopping-trolley-bottom_left">
-		<div class="radio radio-custom">
-			<input type="radio" name="st_radio" id="st_6" value="option6">
-			<label for="st_6">全選</label>
-		</div>
-	</div>
 	<div class="shopping-trolley-bottom_right">
 		<p>NT&nbsp;&#36;2000</p>
 		<div class="shopping-trolley-bottom_button">確認提交</div>
