--- a/src/customer.html
+++ b/src/customer.html
@@ -94,7 +94,7 @@
 			<img src="./images/m_product_03.png" alt="product4"></img>
 		</div>
 		<div class="shopping-trolley-container_p_right">
-			<h4>備奶優惠方案<em>（每人限購一組，兩款擇一)</em></h4>
+			<h4>備奶優惠方案<em>(每人限購一組，兩款擇一)</em></h4>
 			<p>規格：心美力400G&nbsp;兩罐/組</p>
 			<p>NT&nbsp;&#36;150</p>
 		</div>	
@@ -105,7 +105,7 @@
 			<img src="./images/m_product_04.png" alt="product5"></img>
 		</div>
 		<div class="shopping-trolley-container_p_right">
-			<h4>備奶優惠方案<em>（每人限購一組，兩款擇一)</em></h4>
+			<h4>備奶優惠方案<em>(每人限購一組，兩款擇一)</em></h4>
 			<p>規格：心美力400G&nbsp;兩罐/組</p>
 			<p>NT&nbsp;&#36;150</p>
 		</div>	
