加减号更改为input标签

--- a/src/shopping-trolley.html
+++ b/src/shopping-trolley.html
@@ -71,9 +71,9 @@
 			<p>規格:香草口味(14包／盒)X4盒，共56包</p>
 			<p>NT&nbsp;&#36;2000</p>
 			<div class="shopping-trolley-container_count">
-				<div>-</div>
+				<div><input type="text"  placeholder="-" value="" disabled="true"></div>
 				<div>1</div>
-				<div>+</div>
+				<div><input type="text"  placeholder="+" value="" disabled="true"></div>
 			</div>
 		</div>	
 	</div>
@@ -91,9 +91,9 @@
 			<p>規格: 草莓優格口味(14包／盒)X4盒，共56包</p>
 			<p>NT&nbsp;&#36;2000</p>
 			<div class="shopping-trolley-container_count">
-				<div>-</div>
+				<div><input type="text"  placeholder="-" value="" disabled="true"></div>
 				<div>1</div>
-				<div>+</div>
+				<div><input type="text"  placeholder="+" value="" disabled="true"></div>
 			</div>
 		</div>	
 	</div>
@@ -111,9 +111,9 @@
 			<p>規格:香草和草莓優格口味各兩盒，共56包</p>
 			<p>NT&nbsp;&#36;2000</p>
 			<div class="shopping-trolley-container_count">
-				<div>-</div>
+				<div><input type="text"  placeholder="-" value="" disabled="true"></div>
 				<div>1</div>
-				<div>+</div>
+				<div><input type="text"  placeholder="+" value="" disabled="true"></div>
 			</div>
 		</div>	
 	</div>
@@ -131,9 +131,9 @@
 			<p>規格：心美力400G&nbsp;兩罐/組</p>
 			<p>NT&nbsp;&#36;150</p>
 			<div class="shopping-trolley-container_count">
-				<div>-</div>
+				<div><input type="text"  placeholder="-" value="" disabled="true"></div>
 				<div>1</div>
-				<div>+</div>
+				<div><input type="text"  placeholder="+" value="" disabled="true"></div>
 			</div>
 		</div>	
 	</div>
@@ -151,9 +151,9 @@
 			<p>規格：心美力400G&nbsp;兩罐/組</p>
 			<p>NT&nbsp;&#36;150</p>
 			<div class="shopping-trolley-container_count">
-				<div>-</div>
+				<div><input type="text"  placeholder="-" value="" disabled="true"></div>
 				<div>1</div>
-				<div>+</div>
+				<div><input type="text"  placeholder="+" value="" disabled="true"></div>
 			</div>
 		</div>	
 	</div>
