修改小问题

--- a/src/information.html
+++ b/src/information.html
@@ -152,6 +152,7 @@
         </div>
         <div class="detialConditionDataInput">
             <span>
+                <span class="color">&nbsp;</span>
                 <span>室內電話</span>
             </span>
             <input type="text" name="lname" placeholder="09323232" />
@@ -250,18 +251,21 @@
 
         <div class="detialConditionDataInput">
             <span>
+                <span class="color">&nbsp;</span>
                 <span>發票抬頭</span>
             </span>
             <input type="text" name="lname" placeholder="請輸入發票擡頭" />
         </div>
         <div class="detialConditionDataInput">
             <span>
+                <span class="color">&nbsp;</span>
                 <span>統一編號</span>
             </span>
             <input type="text" name="lname" placeholder="請輸入統壹編號" />
         </div>
         <div class="detialConditionDataInput">
             <span>
+                <span class="color">&nbsp;</span>
                 <span>備註信息</span>
             </span>
             <input type="text" name="lname" placeholder="請輸入統壹編號" />
