--- a/src/shopping-trolley.html
+++ b/src/shopping-trolley.html
@@ -60,8 +60,8 @@
 <div class="shopping-trolley-container">
 	<div class="shopping-trolley-container_p">
 		<div class="shopping-trolley-container_p_left">
-			<div class="radio radio-custom">
-				<input type="radio" name="st_radio" id="st_1" value="option1" checked>
+			<div class="checkbox checkbox-custom">
+				<input type="checkbox" name="st_checkbox" id="st_1" value="option1" checked>
 				<label for="st_1"></label>
 			</div>
 			<img src="./images/m_product_01.png" alt="product1"></img>
@@ -80,8 +80,8 @@
 
 	<div class="shopping-trolley-container_p">
 		<div class="shopping-trolley-container_p_left">
-			<div class="radio radio-custom">
-				<input type="radio" name="st_radio" id="st_2" value="option2">
+			<div class="checkbox checkbox-custom">
+				<input type="checkbox" name="st_checkbox" id="st_2" value="option2">
 				<label for="st_2"></label>
 			</div>
 			<img src="./images/m_product_01.png" alt="product2"></img>
@@ -100,8 +100,8 @@
 
 	<div class="shopping-trolley-container_p">
 		<div class="shopping-trolley-container_p_left">
-			<div class="radio radio-custom">
-				<input type="radio" name="st_radio" id="st_3" value="option3">
+			<div class="checkbox checkbox-custom">
+				<input type="checkbox" name="st_checkbox" id="st_3" value="option3">
 				<label for="st_3"></label>
 			</div>
 			<img src="./images/m_product_02.png" alt="product3"></img>
@@ -120,8 +120,8 @@
 
 	<div class="shopping-trolley-container_p">
 		<div class="shopping-trolley-container_p_left">
-			<div class="radio radio-custom">
-				<input type="radio" name="st_radio" id="st_4" value="option4">
+			<div class="checkbox checkbox-custom">
+				<input type="checkbox" name="st_checkbox" id="st_4" value="option4">
 				<label for="st_4"></label>
 			</div>
 			<img src="./images/m_product_03.png" alt="product4"></img>
@@ -140,8 +140,8 @@
 
 	<div class="shopping-trolley-container_p">
 		<div class="shopping-trolley-container_p_left">
-			<div class="radio radio-custom">
-				<input type="radio" name="st_radio" id="st_5" value="option5">
+			<div class="checkbox checkbox-custom">
+				<input type="checkbox" name="st_checkbox" id="st_5" value="option5">
 				<label for="st_5"></label>
 			</div>
 			<img src="./images/m_product_04.png" alt="product5"></img>
