--- a/src/login1.html
+++ b/src/login1.html
@@ -191,7 +191,7 @@
                     </span>
                 </span>
 
-                <div class="informationInput select" id="trigger03">
+                <div class="informationInput select" id="xueli">
 
                 </div>
             </div>
@@ -203,7 +203,7 @@
                     </span>
                 </span>
 
-                <div class="informationInput select" id="trigger04">
+                <div class="informationInput select" id="job">
 
                 </div>
             </div>
@@ -242,9 +242,9 @@
                 </span>
 
                 <span>
-                    <div class="informationInput select" id="trigger4">
+                    <div class="informationInput select" id="trigger2">
                     </div>
-                    <div class="informationInput select" id="trigger5">
+                    <div class="informationInput select" id="trigger3">
                     </div>
                 </span>
             </div>
@@ -269,7 +269,7 @@
                     </span>
                 </span>
 
-                <div class="informationInput select" id="trigger05">
+                <div class="informationInput select" id="time">
 
                 </div>
             </div>
