--- a/src/login2.html
+++ b/src/login2.html
@@ -176,7 +176,7 @@
                     </span>
                 </span>
 
-                <div class="informationInput select" id="trigger07">
+                <div class="informationInput select" id="relationship1">
 
                 </div>
             </div>
@@ -206,7 +206,7 @@
                             <span>親子關系</span>
                         </span>
                     </span>
-                    <div class="informationInput select" id="trigger18">
+                    <div class="informationInput select" id="relationship2">
                     </div>
                 </div>
                 <div class="detialConditionDataInput">
@@ -233,7 +233,7 @@
                                 <span>親子關系</span>
                             </span>
                         </span>
-                        <div class="informationInput select" id="trigger18">
+                        <div class="informationInput select" id="relationship3">
                         </div>
                     </div>
                     <div class="detialConditionDataInput">
