--- a/src/total.html
+++ b/src/total.html
@@ -197,7 +197,7 @@
                         </span>
                     </span>
 
-                    <div class="informationInput select" id="trigger03">
+                    <div class="informationInput select" id="xueli">
 
                     </div>
                 </div>
@@ -209,7 +209,7 @@
                         </span>
                     </span>
 
-                    <div class="informationInput select" id="trigger04">
+                    <div class="informationInput select" id="job">
 
                     </div>
                 </div>
@@ -248,9 +248,9 @@
                     </span>
 
                     <span>
-                        <div class="informationInput select" id="trigger4">
+                        <div class="informationInput select" id="trigger2">
                         </div>
-                        <div class="informationInput select" id="trigger5">
+                        <div class="informationInput select" id="trigger3">
                         </div>
                     </span>
                 </div>
@@ -275,7 +275,7 @@
                         </span>
                     </span>
 
-                    <div class="informationInput select" id="trigger05">
+                    <div class="informationInput select" id="time">
 
                     </div>
                 </div>
@@ -386,7 +386,7 @@
                         </span>
                     </span>
 
-                    <div id="trigger01" class="select">
+                    <div id="trigger1" class="select">
 
                     </div>
                 </div>
@@ -399,10 +399,10 @@
                         </span>
                     </span>
                     <span>
-                        <div id="trigger2" class="select">
+                        <div id="trigger4" class="select">
 
                         </div>
-                        <div id="trigger3" class="select">
+                        <div id="trigger5" class="select">
 
                         </div>
                     </span>
@@ -453,7 +453,7 @@
                         </span>
                     </span>
 
-                    <div class="informationInput select" id="trigger07">
+                    <div class="informationInput select" id="relationship1">
 
                     </div>
                 </div>
@@ -483,7 +483,7 @@
                                 <span>親子關系</span>
                             </span>
                         </span>
-                        <div class="informationInput select" id="trigger18">
+                        <div class="informationInput select" id="relationship2">
                         </div>
                     </div>
                     <div class="detialConditionDataInput">
@@ -510,7 +510,7 @@
                                     <span>親子關系</span>
                                 </span>
                             </span>
-                            <div class="informationInput select" id="trigger18">
+                            <div class="informationInput select" id="relationship3">
                             </div>
                         </div>
                         <div class="detialConditionDataInput">
