--- a/src/total1.html
+++ b/src/total1.html
@@ -133,10 +133,10 @@
         </span>
 
         <span>
-            <div id="trigger5" class="select">
+            <div id="trigger4" class="select">
 
             </div>
-            <div id="trigger6" class="select">
+            <div id="trigger5" class="select">
 
             </div>
         </span>
@@ -172,10 +172,10 @@
         </span>
 
         <span>
-            <div id="trigger7" class="select">
+            <div id="trigger2" class="select">
 
             </div>
-            <div id="trigger8" class="select">
+            <div id="trigger3" class="select">
 
             </div>
         </span>
@@ -212,27 +212,12 @@
             </span>
         </span>
 
-        <div class="informationInput select" placeholder=" 8-18時(不指定）" id="trigger20">
+        <div class="informationInput select"  id="time">
 
         </div>
 
     </div>
-    <div class="detialConditionDataInput">
-        <span>
-            <span>&nbsp;</span>
-            <span>&nbsp;</span>
-        </span>
-        <div class="informationInput  select" placeholder=" 8-13時 " id="trigger21">
-        </div>
-    </div>
-    <div class="detialConditionDataInput">
-        <span>
-            <span>&nbsp;</span>
-            <span>&nbsp;</span>
-        </span>
-        <div class="informationInput select" placeholder="14-18時（最晚配送時段）" id="trigger22">
-        </div>
-    </div>
+
     <div class="detialConditionDataInput informationConditionDataInput">
         <span>
             <span class="color">*</span>
@@ -251,7 +236,7 @@
             </span>
         </span>
 
-        <div id="trigger23" class="select">
+        <div id="bill" class="select">
         </div>
     </div>
 
