--- a/src/login2.html
+++ b/src/login2.html
@@ -190,11 +190,7 @@
             </div>
         </div>
 
-<<<<<<< HEAD
-                <div class="informationInput select" id="relationship1">
-=======
         <h2 class="babyInformation">寶寶資料二</h2>
->>>>>>> 8c5293e22216091c35f38202c97b8724392540de
 
         <div class="detialConditionDataInput">
             <span>
@@ -213,6 +209,7 @@
             <div class="informationInput select" id="trigger18">
             </div>
 
+        </div>  
             <h2 class="babyInformation">寶寶資料二</h3>
 
                 <div class="detialConditionDataInput">
@@ -241,7 +238,9 @@
                         <button type="button" class="addOn"></button>
                     </div>
                 </div>
+
                 <h2 class="babyInformation">寶寶資料三</h3>
+
                     <div class="detialConditionDataInput">
                         <span>
                             <span>寶寶姓名</span>
